# win-reg

./: .gitignore  CMakeLists.txt  LICENSE  README.md
inc/: registry.hpp
inc/ensemble/: registry.hpp
src/: registry.cpp
src/ensemble/: registry.cpp
test/: main.cpp
